# Benchmark

./: parse_results.py  parse_results_set.py  pyproject.toml  readme.md  run_benchmark_multiparty.sh  run_benchmark_single_server.sh  run_benchmark_single_server_set.sh
docs/: microbenchmark_plan.md
results/rebuttal/: parse_results.py  parse_results_set.py  parse_results_set_update.py
results/rebuttal/gnuplot/: appendix_results.gp  appenx_results.gnuplot  appenx_results2.gp  counter_troughput.gp  gcounter_query.gp  gcounter_troughput.gp  gcounter_update.gp  generate_plots.sh  maxvalue_query.gp  maxvalue_update.gp  minboundcounter_update copy.gp  minboundcounter_update.gp  minboundedcounter_decrement.gp  minboundedcounter_increment.gp  minboundedcounter_query.gp  plot.eps  plot.tex  pncounter_decrement.gp  pncounter_increment.gp  pncounter_query.gp  pncounter_troughput.gp  register_query.gp  register_troughput.gp  register_update.gp
results/rebuttal/gnuplot/plots/: appendix_results.eps  appendix_results.tex  counter_troughput.eps  counter_troughput.tex  gcounter_query.eps  gcounter_troughput.eps  gcounter_troughput.tex  gcounter_update.eps  gcounter_update.tex  maxvalue_query.eps  maxvalue_update.eps  maxvalue_update.tex  maxvalue_update2.eps  maxvalue_update2.tex  minboundedcounter_decrement.eps  minboundedcounter_increment.eps  minboundedcounter_query.eps  minboundedcounter_query.tex  minboundedcounter_update.eps  minboundedcounter_update.tex  pncounter_decrement.eps  (+12 more)
workloads/: gcounter.py  maxvalue.py  minboundedcounter.py  pncounter.py  register.py  set.py
(+315 files in other folders)
