[tool.poetry]
name = "crdtbench"
version = "0.1.0"
description = ""
authors = ["Rogério Pontes <1406314+rogerioacp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.12.1"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
